--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile files('libs/baidumapapi_radar_v4_0_0.jar')
     compile files('libs/baidumapapi_search_v4_0_0.jar')
     compile files('libs/baidumapapi_util_v4_0_0.jar')
+    compile files('libs/BaiduTraceSDK_v2_1_14.jar')
 }
