--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -23,12 +24,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile files('libs/baidumapapi_base_v4_0_0.jar')
-    compile files('libs/baidumapapi_cloud_v4_0_0.jar')
-    compile files('libs/baidumapapi_map_v4_0_0.jar')
-    compile files('libs/baidumapapi_radar_v4_0_0.jar')
-    compile files('libs/baidumapapi_search_v4_0_0.jar')
-    compile files('libs/baidumapapi_util_v4_0_0.jar')
-    compile files('libs/BaiduTraceSDK_v2_1_14.jar')
-    compile files('libs/BaiduLBS_Android.jar')
+    compile files('G:/Android/YingFeng/libs/BaiduLBS_Android.jar')
+    compile files('G:/Android/YingFeng/libs/httpmime-4.1.2.jar')
+    compile files('G:/Android/YingFeng/libs/IndoorscapeAlbumPlugin.jar')
 }
